<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="empty"></string>
    <string name="app_name">美人记</string>
    <string name="label_username">昵&#160;&#160;&#160;&#160;称</string>
    <string name="label_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="label_newpassword">新&#160;&#160;密&#160;&#160;码</string>
    <string name="label_check">获取验证码</string>
    <string name="label_confirm_password">确认密码</string>
    <string name="label_phone">手机号码</string>
    <string name="favorite">收藏夹</string>
    <string name="setting">设置</string>
    <string name="shop_car">购物车</string>
    <string name="addto_shop_car">加到购物车</string>
    <string name="order">我的订单</string>
    <string name="order_detail">订单详情</string>
    <string name="title_article_detail">文章详情</string>
    <string name="error_username_empty">用户名不能为空！</string>
    <string name="error_password_empty">密码不能为空！</string>
    <string name="error_confirm_error">确认密码与原密码不同！</string>
    <string name="registering">正在注册，请稍候</string>
    <string name="register_success">恭喜你注册成功！</string>
    <string name="login_success">登录成功，转入登录前界面。</string>
    <string name="fetching_detail">正在获取文章内容，请稍候。</string>
    <string name="menu_beauty_item1">整体妆容</string>
    <string name="menu_beauty_item2">局部妆容</string>
    <string name="menu_beauty_item3">美妆知识</string>
    <string name="menu_beauty_item4">美妆技巧</string>
    <string name="menu_beauty_item5">美妆工具</string>
    <string name="menu_skin_item1">肤质保养</string>
    <string name="menu_skin_item2">气候保养</string>
    <string name="menu_skin_item3">护肤知识</string>
    <string name="menu_skin_item4">卸妆知识</string>
    <string name="menu_perfume_item1">香水知识</string>
    <string name="menu_perfume_item2">香氛选取</string>
    <string name="menu_brand_item1">新品专栏</string>
    <string name="menu_brand_item2">品牌推荐</string>
    <string name="related_pro_title">相关商品</string>
    <string name="getting_product_detail">正在获取商品信息</string>
    <string name="added_to_kart">已经添加到购物车</string>
    <string name="kart_empty">购物车里没有商品！</string>
    <string name="product_count">数量：1</string>
    <string name="getting_article_list">正在读取</string>
    <string name="tab_home">首页</string>
    <string name="tab_fav">收藏夹</string>
    <string name="tab_cart">购物车</string>
    <string name="tab_setting">设置</string>
    <string name="error_no_more_items">已经没有更多产品！</string>
    <string name="pls_log_in_first">请先登录后再操作</string>
    <string name="quick_login">马上登录</string>
    <string name="go_around">去逛逛</string>
    <string name="no_fav_article">还没有收藏文章</string>
    <string name="no_fav_product">还没有收藏商品</string>
    <string name="title_product_detail">商品详情</string>
    <string name="title_product_instro">商品简介</string>
    <string name="title_comment">评论</string>
    <string name="comment_count">（%d条）</string>
    <string name="product_has_been_put_into_kart">商品已经加入购物车</string>
    <string name="register_an_account">注册帐号</string>
    <string name="find_password">找回密码</string>
    <string name="label_gender">性&#160;&#160;&#160;&#160;别</string>
    <string name="gender_female">女</string>
    <string name="gender_male">男</string>
    <string name="label_avatar">头像</string>
    <string name="label_changepasswd">修改密码</string>
    <string name="label_shipping_address">收货地址</string>
    <string name="label_feedback">意见反馈</string>
    <string name="label_about">关于</string>
    <string name="register_title">注册</string>
    <string name="upload_avatar">上传头像</string>
    <string name="login_title">登录</string>
    <string name="find_title">密码找回</string>
    <string name="set_newpassword">设置新密码</string>
    <string name="set_registinfo">注册</string>
    <string name="title_button_camera">照相机</string>
    <string name="title_button_gallery">相册</string>
    <string name="stock_status">商品库存：%d</string>
    <string name="function_status">商品功效：%s</string>
    <string name="brand_status">商品品牌：%s</string>
    <string name="no_more_comments">没有更多评论</string>
    <string name="cannot_take_photo">无法拍照！</string>
    <string name="update_info_success">更新信息成功！</string>
    <string name="write_comment">提交评论</string>
    <string name="submit_comment">发表评论</string>
    <string name="more"><u>更多</u></string>
    <string name="label_product_star">商品打分：</string>
    <string name="hint_write_comment">请把您的评论写在这里</string>
    <string name="submit_success">评论提交成功</string>
    <string name="delete_from_kart">删除购物车中的商品</string>
    <string name="confirm_delete_from_kart">将要从购物车中删除：%s</string>
    <string name="address">收货地址</string>
    <string name="add_address">添加地址</string>
    <string name="add_new_address">添加新地址</string>
    <string name="real_name">姓&#160;&#160;&#160;&#160;名：</string>
    <string name="phone">电&#160;&#160;&#160;&#160;话：</string>
    <string name="post">邮&#160;&#160;&#160;&#160;编：</string>
    <string name="address_detail">详细地址：</string>
    <string name="no_login">您还没有登录哦~</string>
    <string name="add_address_success">新增收货地址成功</string>
    <string name="max_address_reached">最多只能添加%d个地址！</string>
    <string name="address_list_text" formatted="false">%s\n%s</string>
    <string name="delete_address_success">删除地址成功</string>
    <string name="make_default_address_success">已经设置为默认地址</string>
    <string name="error_name_empty">收货人姓名不能为空！</string>
    <string name="error_address_empty">收货地址不能为空！</string>
    <string name="error_phone_empty">电话号码不能为空！</string>
    <string name="cannot_delete_default">不能删除默认地址</string>
    <string name="cannot_delete_only_one">只有一个地址，不能删除！</string>
    <string name="hours_ago">%d小时以前</string>
    <string name="confirm_delete_favorite">将要从收藏夹中删除</string>
    <string name="log_in_with_weibo">用新浪微博登录</string>
    <string name="write_feedback">请把意见写在这里</string>
    <string name="input_phone_number">请输入您注册时的手机号</string>
    <string name="input_new_password">请输入新的登录密码</string>
    <string name="input_regist_phonenum">请输入手机号码进行验证</string>
    <string name="input_confirm">请再次输入新密码</string>
    <string name="input_check_word">请输入验证码</string>
    <string name="check_receive_message">*没有收到验证码吗？</string>
    <string name="check_wait_message">*验证码下发阻塞,请在60秒后重新获取。</string>
    <string name="check_find_message">*验证码短信可能被安全系统拦截,请查看。</string>
    <string name="about">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;美人记，集合美妆护肤教程、时尚潮流资讯及购物一体化的时尚应用，让你分分秒秒成为大美人。\r\n\r\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在这里，你可以找到你想要的任何妆容和护肤技巧，不再担心千篇一律的单一妆容，不再烦恼各种问题肌肤的护理。更可以直接购买针对文章内感兴趣的优质商品。即看即买，方便快捷，坐在家里等待美丽出现。同时，还可以随时分享资讯及心得给闺蜜们，让大家一起见证你的美丽。</string>
    <string name="distinct">送货区域：</string>
    <string name="distinct_hint">选择区</string>
    <string name="province_hint">选择省</string>
    <string name="city_hint">选择市</string>
    <string name="no_item">购物车还没有商品哦~</string>
    <string name="select_province_first">请先选择省份</string>
    <string name="select_province_and_city_first">请先选择省份和城市！</string>
    <string name="checkout">结算中心</string>
    <string name="send_address">送货地址</string>
    <string name="deliever">配送方式</string>
    <string name="pay_mode">支付方式：%s</string>
    <string name="working_days">只工作日送货（休息日、假日不送货）</string>
    <string name="all_days">工作日、双休日与假日均可送货</string>
    <string name="holidays_only">只双休日、假日送货（工作日不送货）</string>
    <string name="alipay">支付宝</string>
    <string name="alipay_success">订单支付成功</string>
    <string name="alipay_failed">订单支付失败，请从我的订单列表查看订单</string>
    <string name="pay_on_deliver">货到付款</string>
    <string name="view_address">查看地址</string>
    <string name="buy_info">购买信息</string>
    <string name="pro_list">商品清单</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装移动快捷支付，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="price_label">价格：</string>
    <string name="count_label">数量：</string>
    <string name="default_store_name">商品卖家：乐蜂</string>
    <string name="total">总计</string>
    <string name="pro_total">商品总价：</string>
    <string name="deliever_price">运费：</string>
    <string name="total1">总计：</string>
    <string name="free_shipping_not_reached">购物满99元即可免费送货，要再看看吗？</string>
    <string name="delete_address">删除此地址</string>
    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="redo">重试</string>
    <string name="install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="install_alipay">你尚未安装支付宝钱包，请立即安装</string>
    <string name="new_order">订单</string>
    <string name="sina_weibo_login">新浪微博登录</string>
    <string name="qq_login">QQ账号登录</string>
    <string name="label_order">我的订单</string>
    <string name="order_success">下订单成功！</string>
    <string name="submit_order">提交订单</string>
    <string name="send_feedback_success">提交意见反馈成功</string>
    <string name="quit_app_prompt">确定要退出吗？</string>
    <string name="add_address_first">请输入送货地址</string>
    <string name="go_checkout">前往支付</string>
    <string name="continue_shopping">继续购物</string>
    <string name="empty_article_list">小编正在编辑文章ing~稍等片刻再回来哦~</string>
    <string name="pay_mode_default">支付方式：</string>
    <string name="weibo_error">新浪微博登录失败</string>
    <string name="log_in_failed">登录失败！</string>
    <string name="no_feedback_msg">请输入意见反馈</string>
    <string name="no_comment_msg">请输入您的评论</string>
    <string name="product_not_found_message1">糟糕啦，TOT~</string>
    <string name="product_not_found_message2">该商品暂时不存在或已下架</string>
    <string name="article_not_found_message1">糟糕啦，TOT~</string>
    <string name="article_not_found_message2">您找的文章暂时不存在了</string>
    <string name="order_id_label">订单ID：</string>
    <string name="order_default_status">未处理</string>
    <string name="total_price_label">合 计：</string>
    <string name="total_price_default">1</string>
    <string name="order_total_count_label">数 量：</string>
    <string name="order_total_count_default">x 1</string>
    <string name="password_old">旧密码</string>
    <string name="password_old_hint">请输入旧密码</string>
    <string name="password_new">新密码</string>
    <string name="password_new_hint">不少于6位</string>
    <string name="password_repeatnew">重复密码</string>
    <string name="password_repeatnew_hint">重复新密码</string>
    <string name="save">保存</string>
    <string name="nextstep">下一步</string>
    <string name="getword">获取验证码</string>
    <string name="finish">完成</string>
    <string name="log_out">退出登录</string>
    <string name="update_passwd_succ">修改密码成功，请重新登录</string>
    <string name="download_progress">已下载0%</string>
    <string name="management">管理</string>
    <string name="done">完成</string>
    <!--<string name="count_label">数量：</string>-->
    <string name="products_count_label">商品数量：</string>
    <string name="products_cost_label">商品总价：</string>
</resources>