<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="14dp"
    android:paddingRight="14dp"
    android:background="@drawable/order_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/order_summary"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/order_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/order_id_label" />

        <TextView
            android:id="@+id/order_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="TextView" />

        <TextView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="5dip"
            android:text="@string/order_default_status"
            android:textColor="@color/default_pink_color"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.basemaple.widget.NoScrollListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:scrollbars="none"
        android:smoothScrollbar="true" >
    </com.basemaple.widget.NoScrollListView>

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/divider_order" />

    <LinearLayout
        android:orientation="horizontal" 
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_label" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/total_price_default"
            android:textColor="@color/default_pink_color"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total_count_label" />

        <TextView
            android:id="@+id/order_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/default_pink_color"
            android:textSize="16sp"
            android:text="@string/order_total_count_default" />

    </LinearLayout>

</LinearLayout>
