<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar_bg"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:onClick="onBack"
            android:scaleType="center"
            android:src="@drawable/button_back" />
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:text="@string/set_registinfo"
            style="@style/titleBarText" />
    </RelativeLayout>
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginLeft="34dip"
            android:layout_marginRight="34dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="34dip"
            android:orientation="horizontal" >

		    <EditText
		        android:id="@+id/phoneNum"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/write_comment_bg"
		        android:gravity="center_vertical"
		        android:hint="@string/input_regist_phonenum"
		        android:textSize="14sp"
		        android:inputType="number|phone"
		        android:paddingTop="13dp"
		        android:paddingBottom="13dp"
		        android:paddingLeft="11dip" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="34dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                    android:id="@+id/checkWord"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/write_comment_bg"
                    android:gravity="center_vertical"
                    android:textSize="14sp"
                    android:hint="@string/input_check_word"
                    android:inputType="number"
                    android:paddingLeft="11dip"
                    android:paddingBottom="13dip"
                    android:paddingTop="13dip"/>
            
            <Button
                    android:id="@+id/btn_getword"
                    android:layout_width="100dip"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/btn_common_bg"
                    android:scaleType="centerCrop"
                    android:text="@string/getword"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/check_receive_message"
                    android:textSize="12sp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/check_wait_message"
                    android:textSize="12sp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/check_find_message"
                    android:textSize="12sp"/>
        </LinearLayout>
        
        <Button
            android:id="@+id/btn_nextstep"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/btn_common_bg"
            android:text="@string/nextstep"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
    
</LinearLayout>