<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/common_bg"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar_bg"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:onClick="onBack"
            android:scaleType="center"
            android:src="@drawable/button_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:text="@string/label_changepasswd"
            style="@style/titleBarText" />
    </RelativeLayout>
    
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:orientation="vertical"
            android:paddingLeft="14dip"
            android:paddingRight="14dip">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_bg_top"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textSize="14sp"
                    android:text="@string/password_old"
                    android:textColor="@color/activity_login_font"/>

            <EditText
                    android:id="@+id/password_old"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:hint="@string/password_old_hint"
                    android:background="@null"
                    android:paddingLeft="5dip"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_bg_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textSize="14sp"
                    android:text="@string/password_new"
                    android:textColor="@color/activity_login_font"/>

            <EditText
                    android:id="@+id/password_new"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:hint="@string/password_new_hint"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:paddingLeft="5dip"/>
        </TableRow>
        
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_bg_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textSize="14sp"
                    android:text="@string/password_repeatnew"
                    android:textColor="@color/activity_login_font"/>

            <EditText
                    android:id="@+id/password_repeatnew"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textSize="14sp"
                    android:hint="@string/password_repeatnew_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="5dip"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_common_bg"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
