<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:background="@color/activity_main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/titlebar_bg"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="60dip"
                android:layout_height="30dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:scaleType="center"
                android:contentDescription="@string/empty"
                android:src="@drawable/button_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:text="@string/add_address"
                style="@style/titleBarText"
                android:id="@+id/title"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_bg_top"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="right"
                    android:text="@string/real_name"
                    android:textColor="@color/activity_login_font" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:paddingLeft="5dip" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_bg_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="right"
                    android:text="@string/phone"
                    android:textColor="@color/activity_login_font" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:inputType="phone"
                    android:paddingLeft="5dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_bg_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="right"
                    android:text="@string/post"
                    android:textColor="@color/activity_login_font" />

                <EditText
                    android:id="@+id/post"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:inputType="numberDecimal"
                    android:paddingLeft="5dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_bg_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="right"
                    android:text="@string/distinct"
                    android:textColor="@color/activity_login_font" />

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="5dip" >

                    <TextView
                        android:id="@+id/province"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3333"
                        android:background="@null"
                        android:hint="@string/province_hint" />

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3333"
                        android:background="@null"
                        android:hint="@string/city_hint" />

                    <TextView
                        android:id="@+id/distinct"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3333"
                        android:background="@null"
                        android:hint="@string/distinct_hint" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_bg_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="right"
                    android:text="@string/address_detail"
                    android:textColor="@color/activity_login_font" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:paddingLeft="5dip" />
            </LinearLayout>

	        <Button
	            android:id="@+id/add"
                android:layout_width="296dip"
	            android:layout_marginTop="15dip"
	            android:text="@string/finish"
	            style="@style/default_button" />
	        
            <ImageButton
                android:id="@+id/make_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:contentDescription="@string/empty"
                android:background="@drawable/button_make_default"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>